# graphql-gateway

./: .clang-format  .editorconfig  .gitignore  .goreleaser.yml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  graphql.proto
.github/: dependabot.yml
.github/workflows/: release.yml
cmd/protoc-gen-graphql-gateway/: BUILD.bazel  main.go
cmd/protoc-gen-graphql-schema/: main.go
example/federation/: main.go
example/federation/account/: main.go
example/federation/account/service/: account.go
example/federation/product/: main.go
example/federation/product/service/: product.go
example/federation/proto/account/: account.pb.go  account.pb.gql.go  account.proto
example/federation/proto/product/: product.pb.go  product.pb.gql.go  product.proto
example/federation/proto/review/: review.pb.go  review.pb.gql.go  review.proto
example/federation/review/: main.go
example/federation/review/service/: review.go
example/mixin/: Makefile  main.go
example/mixin/account/: main.go
example/mixin/account/service/: service.go
example/mixin/product/: main.go
example/mixin/product/service/: service.go
example/mixin/proto/: federation.graphql
example/mixin/proto/account/: account.pb.go  account.pb.gql2.go  account.proto
example/mixin/proto/product/: product.graphql  product.pb.go  product.pb.gql2.go  product.proto
example/mixin/proto/review/: review.graphql  review.pb.go  review.pb.gql2.go  review.proto
example/mixin/review/: main.go
example/mixin/review/service/: service.go
example/photo_share/: Makefile  main.go
example/photo_share/photo/: main.go
example/photo_share/photo/service/: photo.go
example/photo_share/proto/photo/: photo.graphql  photo.pb.go  photo.pb.gql.go  photo.proto
example/photo_share/proto/user/: user.pb.go  user.pb.gql.go  user.proto
example/photo_share/user/: main.go
example/photo_share/user/service/: user.go
example/sample/: Makefile  main.go
example/sample/cmd/: main.go
example/sample/proto/green/: green.pb.go  green.pb.gql.go  green.proto
example/sample/proto/red/: red.pb.go  red.pb.gql.go  red.proto
example/sample/service/: green.go  red.go
pkg/generator/: generator.go
pkg/protoc/: BUILD.bazel  generator.go  protoc.go  protoc_test.go
pkg/registry/: BUILD.bazel  registry.go  types.go
pkg/template/: gen.go  gen.tmpl  handler.tmpl  handler.tmpl.go  imports.tmpl  imports.tmpl.go  schemas.tmpl  schemas.tmpl.go  template.go
proto/: graphql.pb.go
runtime/: BUILD.bazel  context.go  error.go  runtime.go  runtime_test.go
runtime/cache/: cache.go  cache_test.go
runtime/codec/: codec.go
runtime/encoder/: encoder.go  encoder_test.go
runtime/errors/: error.go  error_test.go  grpc_err_detail.go
runtime/scalar/: BUILD.bazel  extension.go  types.go  types_test.go
test/: main.go
test/basic/: BUILD.bazel  Makefile  user.pb.go  user.pb.gql.go  user.proto
test/sample/: main.go
test/sample/cmd/: main.go
test/sample/proto/blue/: blue.proto
test/sample/proto/green/: green.proto
test/sample/proto/red/: red.pb.go  red.pb.gql.go  red.proto
test/sample/service/: red.go
