load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/grpc-custom/graphql-gateway
gazelle(name = "gazelle")

proto_library(
    name = "graphql_proto",
    srcs = ["graphql.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "graphql_go_proto",
    importpath = "github.com/grpc-custom/graphql-gateway/proto",
    proto = ":graphql_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":graphql_go_proto"],
    importpath = "github.com/grpc-custom/graphql-gateway/proto",
    visibility = ["//visibility:public"],
)
