load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grpc-custom/graphql-gateway/cmd/protoc-gen-graphql-gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/protoc:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-graphql-gateway",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
