load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/grpc-custom/graphql-gateway/runtime/scalar",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_graphql_go_graphql//:go_default_library",
        "@com_github_graphql_go_graphql//language/ast:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["types_test.go"],
    embed = [":go_default_library"],
)
