load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "user_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/grpc-custom/graphql-gateway:gateway_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "user_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/grpc-custom/graphql-gateway/test/basic",
    proto = ":user_proto",
    visibility = ["//visibility:public"],
    deps = ["//github.com/grpc-custom/graphql-gateway:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    embed = [":user_go_proto"],
    importpath = "github.com/grpc-custom/graphql-gateway/test/basic",
    visibility = ["//visibility:private"],
    deps = [
        "//runtime:go_default_library",
        "//test/basic/user:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "basic",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
